--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -1,6 +1,6 @@
 <%home = "/"+game%>
 
-<nav class="navbar navbar-default navbar-inverse">
+<nav class="navbar navbar-default navbar-inverse" style="border-radius: 0;">
 	<div class="container-fluid">
 		<div class="navbar-header">
 			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -9,7 +9,7 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="<%=home%>">
+			<a class="navbar-brand" href="<%=home%>" target="_top">
 				<% if (game == 'wot') { %>
 					WOT Tactics
 				<% } else if (game == 'wows') { %>
@@ -37,35 +37,39 @@
 		<ul class="nav navbar-nav">
 			<li><p class="navbar-text hidden-lg hidden-sm hidden-md"><%=l('Links')%>:<p>
 			<% if (user.identity) { %>
-				<li><a href="stored_tactics.html"><%=l('Stored tactics')%></a></li>
+				<li><a href="stored_tactics.html" target="_top"><%=l('Stored tactics')%></a></li>
 			<% } %>
-			<li><a href="getting_started.html"><%=l('Getting started')%></a></li>
-			<li><a href="about.html"><%=l('About')%></a></li>
+			<li><a href="getting_started.html" target="_top"><%=l('Getting started')%></a></li>
+			<li><a href="about.html" target="_top"><%=l('About')%></a></li>
 			
 			<li class="divider-vertical hidden-xs"></li>
 			
 			<li><p class="navbar-text"><%=l('Share')%>:<p>
 			
-			<li><a data-toggle="tooltip" title="<%=l('Share on faceook')%>" id="facebook_link" href="https://www.facebook.com/dialog/share?app_id=580177672120479&display=popup&href="><i class="fa-lg icon-facebook"></i></a>
-			<li><a data-toggle="tooltip" title="<%=l('Share on twitter')%>" id="twitter_link" href="https://twitter.com/intent/tweet?button_hashtag=wottactic&text= " data-url="<%=url.split('/')[0]%>" data-dnt="true"><i class="fa-lg icon-twitter"></i></a>
-			<li><a data-toggle="tooltip" title="<%=l('Share on google+')%>" id="google_link" href="https://plus.google.com/share?url=" onclick="javascript:window.open(this.href,'', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=600,width=600');return false;"><i class="fa-lg icon-google-plus"></i></a>
+			<li><a target="_top" data-toggle="tooltip" title="<%=l('Share on faceook')%>" id="facebook_link" href="https://www.facebook.com/dialog/share?app_id=580177672120479&display=popup&href="><i class="fa-lg icon-facebook"></i></a>
+			<li><a target="_top" data-toggle="tooltip" title="<%=l('Share on twitter')%>" id="twitter_link" href="https://twitter.com/intent/tweet?button_hashtag=gametactic&text= " data-url="<%=url.split('/')[0]%>" data-dnt="true"><i class="fa-lg icon-twitter"></i></a>
+			<li><a target="_top" data-toggle="tooltip" title="<%=l('Share on google+')%>" id="google_link" href="https://plus.google.com/share?url=" onclick="javascript:window.open(this.href,'', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=600,width=600');return false;"><i class="fa-lg icon-google-plus"></i></a>
 
 			<li class="divider-vertical hidden-xs"></li>
 			
 			<li><p class="navbar-text"><%=l('Donate')%>:<p>
 			
 			<li data-toggle="tooltip" title="<%=l('Donate using paypal')%>">
-			<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=3DJZFARS4ZG2U"><i class="fa-lg icon-paypal"></i></a>
+			<a target="_top" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=3DJZFARS4ZG2U"><i class="fa-lg icon-paypal"></i></a>
 			</li>
 			<li data-toggle="tooltip" title="<%=l('Become a patreon')%>">
-			<a href="https://www.patreon.com/kalith"><i class="fa-lg icon-patreon"></i>
+			<a target="_top" href="https://www.patreon.com/kalith"><i class="fa-lg icon-patreon"></i>
 			</a></li>
 			
 			<script type="text/javascript">
 				document.addEventListener("DOMContentLoaded", function(event) {
 					var link = "http://<%=url.split('/')[0]%>";				
 					var fb = document.getElementById('facebook_link');
-					fb.setAttribute("href", fb.getAttribute('href') + encodeURIComponent(link) + "&redirect_uri=" + encodeURIComponent("http://for-good.tk"));
+					var promo_link = "http://gametactic.org";
+					if (link == "http://betweenthebits.com") {
+						promo_link = "http://betweenthebits.com";
+					}
+					fb.setAttribute("href", fb.getAttribute('href') + encodeURIComponent(link) + "&redirect_uri=" + encodeURIComponent(promo_link));
 					var twitter = document.getElementById('twitter_link')
 					twitter.setAttribute("href", twitter.getAttribute('href') + encodeURIComponent(link));
 					var google = document.getElementById('google_link')
@@ -80,7 +84,7 @@
 				<a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
 				  <%=l('Other Games')%><span class="caret"></span>
 				</a>
-				<ul class="dropdown-menu">
+				<ul class="dropdown-menu" style="z-index:10">
 					<li><a href="http://wottactic.com"><div class="inline icon icon-wot"></div>&nbsp; World of Tanks</a></li>
 					<li><a href="http://wowstactic.tk"><div class="inline icon icon-wows"></div>&nbsp; World of Warships</a></li>
 					<li><a href="http://wottactic.com/blitz.html"><div class="inline icon icon-blitz"></div>&nbsp; World of Tanks Blitz</a></li>
