- Matching themes a little

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -42,7 +42,7 @@ button {
 
 .side_bar {
 	padding-top: 0px;
-	background: #CCCCCC;
+	background: #F0F0F0;
 	display:inline-block;
 	vertical-align:top;
 	border: 1px solid black;
